crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_nursery_group.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `nursery`: The `nursery` group cannot be selected. Select a specific nursery rule
      instead.
  


```
