crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_rule_doesnt_exist.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious/inexistant check.js
```

## `check.js`

```js
for(;true;);

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `suspicious/inexistant`: The rule, group or domain doesn't exist.
  


```
