crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_rule_ignore_suppression_comments.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious/noDebugger check.js
```

## `check.js`

```js
debugger;
// biome-ignore lint/performance/noDelete: <explanation>
delete obj.prop;

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:2:44 suppressions/incorrect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! A suppression shouldn't have an <explanation> placeholder. Example of suppression: // biome-ignore lint: false positive
  
    1 │ debugger;
  > 2 │ // biome-ignore lint/performance/noDelete: <explanation>
      │                                            ^^^^^^^^^^^^^
    3 │ delete obj.prop;
    4 │ 
  

```

```block
check.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
    2 │ // biome-ignore lint/performance/noDelete: <explanation>
    3 │ delete obj.prop;
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
