crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_rule_skip_group.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious/noDebugger --skip=suspicious check.js
```

## `check.js`

```js
debugger; delete obj.prop; a === -0;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
