crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_rule_with_linter_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=style/useNamingConvention check.js
```

## `biome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `check.js`

```js

    export function CONSTANT_CASE(){}
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - check.js
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
