crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_rule_with_recommended_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=lint/style/useNamingConvention check.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false
    }
  }
}
```

## `check.js`

```js

    export function CONSTANT_CASE(){}
    
```

# Emitted Messages

```block
biome.json:2:19 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
  > 2 │         "linter": {
      │                   ^
  > 3 │             "rules": {
  > 4 │                 "recommended": false
  > 5 │             }
  > 6 │         }
      │         ^
    7 │     }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
check.js:2:21 lint/style/useNamingConvention ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i This global function name should be in camelCase or PascalCase or UPPERCASE.
  
  > 2 │     export function CONSTANT_CASE(){}
      │                     ^^^^^^^^^^^^^
    3 │     
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
