crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_skip_group.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious --skip=suspicious check.js
```

## `check.js`

```js

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
