crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_skip_rule.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious/noDebugger --skip=suspicious/noDebugger check.js
```

## `check.js`

```js

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
