crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --only=complexity/useArrowFunction check.js
```

## `biome.json`

```json
{}
```

## `check.js`

```js

    export const z = (array) => {
        array.map((sentence) => sentence.split(" ")).flat();
        return 0;
    };
    
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
